--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,6 +4,7 @@ FROM debian:bullseye
 # Install all the program
 RUN	apt-get update
 RUN apt-get upgrade
+RUN apt-get install apt-utils
 RUN apt-get install -y nginx
 RUN apt-get install -y openssl
 
