--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: nginx
     image: nginx
     volumes:
-      - WP_Files:/home/vgroux/data
+      - WP_Files:/home/vgroux/data/wordpress
     ports:
       - 443:443
     networks:
@@ -13,11 +13,41 @@ services:
     restart: on-failure
     env_file:
       - ./.env
-#    depends_on:
-#      - wordpress
+    depends_on:
+     - wordpress
     build:
       context: requirements/nginx
       dockerfile: Dockerfile
+
+  wordpress:
+    container_name: wordpress
+    image: wordpress
+    volumes:
+      - WP_Files:/home/vgroux/data/wordpress
+    networks:
+      - inception
+    restart: on-failure
+    env_file:
+      - ./.env
+    # depends_on:
+    #   - mariadb
+    build: 
+      context: requirements/wordpress
+      dockerfile: Dockerfile
+
+  # mariadb:
+  #   container_name: mariadb
+  #   image: mariadb
+  #   volumes:
+  #     - WP_DB:/home/vgroux/data/mysql
+  #   networks:
+  #     - inception
+  #   restart: on-failure
+  #   env_file:
+  #     - ./.env
+  #   build: 
+  #     context: requirements/mariadb
+  #     dockerfile: Dockerfile
 
 volumes:
   WP_Files:
