--- a/srcs/requirements/wordpress/conf/php.conf
+++ b/srcs/requirements/wordpress/conf/php.conf
@@ -1,2 +1,12 @@
 [vgroux@42lausanne.ch]
-user = 
+user = www-data
+group = www-data
+listen = wordpress:9000
+listen.owner = www-data
+listen.group = www-data
+pm = dynamic
+pm.max_children = 5
+pm.start_servers = 2
+pm.min_spare_servers = 1
+pm.max_spare_servers = 3
+clear_env = no
