--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -11,12 +11,15 @@ server {
 	root /var/www/wordpress;
 	index index.php index.html index.htm;
 
+	error_log logs/error.log warn;
+
 	location / {
 		try_files $uri $uri/ =404;
 	}
+	
 
 	location ~ [^/]\\.php(/|$) {
-		include snippets/fastcgi-php.conf;
 		fastcgi_pass wordpress:9000;
+		include snippets/fastcgi-php.conf;
 	}
 }
