--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -3,23 +3,23 @@ server {
 	listen [::]:443 ssl;
 
 	server_name vgroux.42.fr;
+
 	ssl_certificate /etc/ssl/certs/vgroux.crt;
 	ssl_certificate_key /etc/ssl/private/vgroux.key;
 
 	ssl_protocols	TLSv1.2 TLSv1.3;
 	
 	root /var/www/wordpress;
-	index index.php index.html index.htm;
+	index index.php;
 
 	error_log logs/error.log warn;
 
 	location / {
 		try_files $uri $uri/ =404;
 	}
-	
 
 	location ~ [^/]\\.php(/|$) {
-		fastcgi_pass wordpress:9000;
 		include snippets/fastcgi-php.conf;
+		fastcgi_pass wordpress:9000;
 	}
 }
