--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,23 +1,18 @@
-# Base docker image
 FROM debian:bullseye
 
-# Install all the program
-RUN	apt-get update -y
+RUN apt-get update -y
 RUN apt-get upgrade -y
-RUN apt-get install -y apt-utils
-
-# Install MariaDB
-RUN apt-get install -y mariadb-server
+RUN apt-get install vim -y
+RUN apt-get install mariadb-server -y
 
 RUN mkdir -p /run/mysqld
-RUN chown -R mysql:mysql /run/mysqld
-RUN chown -R mysql:mysql /var/lib/mysql
+RUN chown -R mysql:root /run/mysqld
 
-COPY ./conf/mariadb.conf /etc/mysql/mariadb.conf.d/50-server.cnf
+COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 
-COPY ./tools/script.sh /etc/script.sh
+COPY ./script/script.sh /etc/script.sh
 RUN chmod +x /etc/script.sh
 
 EXPOSE 3306
 
-CMD ["sh", "/etc/script.sh"]
+ENTRYPOINT ["sh", "/etc/script.sh"]
