--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,4 +1,7 @@
-server {
+events {}
+
+http {
+	server {
 	listen 443 ssl;
 	listen [::]:443 ssl;
 
@@ -7,12 +10,10 @@ server {
 	ssl_certificate /etc/ssl/certs/vgroux.crt;
 	ssl_certificate_key /etc/ssl/private/vgroux.key;
 
-	ssl_protocols	TLSv1.2 TLSv1.3;
-	
+	ssl_protocols TLSV1.2 TLSv1.3;
+
 	root /var/www/wordpress;
 	index index.php;
-
-	error_log logs/error.log warn;
 
 	location / {
 		try_files $uri $uri/ =404;
@@ -20,6 +21,7 @@ server {
 
 	location ~ [^/]\\.php(/|$) {
 		include snippets/fastcgi-php.conf;
-		fastcgi_pass wordpress:9000;
+       	fastcgi_pass wordpress:9000;
+    	}
 	}
 }
