--- a/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/srcs/requirements/mariadb/conf/50-server.cnf
@@ -1,7 +1,7 @@
 [mysqld]
+
 datadir=/var/lib/mysql
 socket=/run/mysqld/mysqld.sock
-bind-address=0.0.0.0
+bind_address=*
 port=3306
 user=mysql
-max_allowed_packet=256M
