--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,41 +1,34 @@
-# Base docker image
-FROM debian:bullseye
+FROM	debian:bullseye
 
-# Install the base programs
-RUN	apt-get update -y
-RUN apt-get upgrade -y
-RUN apt-get install -y wget
-RUN apt-get install -y php7.4
-RUN apt-get install -y php-fpm
-RUN apt-get install -y php-mysql
-RUN apt-get install -y mariadb-client
+RUN		apt update -y && apt upgrade -y
 
-# Install Wordpress
-RUN wget https://wordpress.org/latest.tar.gz -O latest.tar.gz
-RUN mkdir -p /var/www
-RUN chmod 777 /var/www
-RUN mv latest.tar.gz /var/www
-RUN mkdir -p /var/www/wordpress
-RUN cd /var/www && tar xfz latest.tar.gz && rm latest.tar.gz
-RUN chmod 755 /var/www/wordpress
+RUN		apt-get -y install wget
 
-COPY ./conf/php.conf /etc/php/7.3/fpm/pool.d/www.conf
+RUN		apt-get install -y php	\
+		php-fpm						\
+		php-mysql					\
+		mariadb-client
 
-RUN mkdir -p /run/php
-RUN chmod 755 /run/php
+RUN		wget https://fr.wordpress.org/wordpress-6.2-fr_FR.tar.gz -P /var/www
+RUN		cd /var/www && tar -xzf wordpress-6.2-fr_FR.tar.gz && rm wordpress-6.2-fr_FR.tar.gz
+RUN		chmod 755 /var/www/wordpress
 
-RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-RUN chmod +x wp-cli.phar
-RUN mv wp-cli.phar /usr/local/bin/wp
+COPY	./conf/php.conf /etc/php/7.4/fpm/pool.d/www.conf
 
-COPY ./tools/auto_config_wp.sh /etc/auto_config_wp.sh
+RUN     mkdir -p /run/php
+RUN     chmod 755 /run/php
 
-RUN chmod +x /etc/auto_config_wp.sh
+RUN		wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+RUN		chmod +x wp-cli.phar
+RUN		mv wp-cli.phar /usr/local/bin/wp
 
-EXPOSE 9000
+COPY	./script/auto_config.sh /etc/auto_config.sh
+COPY	./script/article.txt /tmp/article.txt
 
+RUN		chmod +x /etc/auto_config.sh
+
+EXPOSE	9000
 
 WORKDIR /var/www/wordpress
-RUN mv wp-config-sample.php wp-config.php
 
-CMD [ "sh", "/etc/auto_config_wp.sh" ]
+CMD		["sh", "/etc/auto_config.sh"]
